--- a/final_project_V5.ipynb
+++ b/final_project_V5.ipynb
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "e25c27d3-b243-4fba-b450-b54c00ade1c0",
    "metadata": {},
    "outputs": [
@@ -511,14 +511,15 @@
      "text": [
       "Ford F-Series truck sales nationwide compared to at the Ford dealership in Ames: \n",
       "\n",
+      "\n",
       "The most popular selling Ford vehicle for the Ames dealership is the F-150, and it accounts for 40.59% of all sales at the dealership. \n",
       "The Ford F-150 has various trim levels, and the most commonly sold trim in Ames is the 'XL' trim. Approximately 37.27% of the F-150 trucks sold at the Ames deaslership were sold in this trim level.  \n",
+      "\n",
       "\n",
       "The Ford F-Series accounted for 12.03% of sales nation wide. \n",
       "\n",
       "\n",
       "50 recent tweets about the Ford F-150 have the following average positivity levels: \n",
-      "\n",
       "% Positive Tweets: 46.00% \n",
       "% Negative Tweets: 10.00% \n",
       "% Negative Tweets: 44.00% \n"
@@ -526,14 +527,14 @@
     }
    ],
    "source": [
-    "print(\"Ford F-Series truck sales nationwide compared to at the Ford dealership in Ames: \\n\")\n",
+    "print(\"Ford F-Series truck sales nationwide compared to at the Ford dealership in Ames: \\n\\n\")\n",
     "print(f\"The most popular selling Ford vehicle for the Ames dealership is the F-150, and it accounts for {model_count['F-150']/len(local_df.loc[:]) *100 :.2f}% of all sales at the dealership. \")\n",
     "print(f\"The Ford F-150 has various trim levels, and the most commonly sold trim in Ames is the 'XL' trim. Approximately {trim_count['XL']/model_count['F-150'] *100 :.2f}% of the F-150 trucks sold at the Ames deaslership were sold in this trim level.  \")\n",
     "\n",
     "\n",
-    "print(f\"\\nThe Ford F-Series accounted for {national_data_dict['Ford F-Series']/national_data_dict['All_Vehicle_Sale_Totals'] *100 :.2f}% of sales nation wide. \")\n",
+    "print(f\"\\n\\nThe Ford F-Series accounted for {national_data_dict['Ford F-Series']/national_data_dict['All_Vehicle_Sale_Totals'] *100 :.2f}% of sales nation wide. \")\n",
     "\n",
-    "print(\"\\n\\n50 recent tweets about the Ford F-150 have the following average positivity levels: \\n\")\n",
+    "print(\"\\n\\n50 recent tweets about the Ford F-150 have the following average positivity levels: \")\n",
     "print(f'% Positive Tweets: {pos_count/len(twitter_df) *100:.2f}% ')\n",
     "print(f'% Negative Tweets: {neg_count/len(twitter_df) *100:.2f}% ')\n",
     "print(f'% Negative Tweets: {nt_count/len(twitter_df) *100:.2f}% ')"
